[tool.poetry]
name = "memc"
version = "0.1.0"
description = "memc"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.19.4"
python-memcached = "^1.59"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
